/*
 * $Id: ChangeLog,v 1.5365 2007/03/01 01:01:57 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2007-02-28 22:35 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
 * include/std.ch
   * Added more conservative rules for ENDDO, ENDIF, ENDCASE and ENDFOR protected by HB_C52_STRICT guard

 /*
   Clipper rules are dangerous for any input which uses inline seperator:

      IF x ; ? x ; ENDIF; More() // More would be lost with Clipper!
 */

2007-03-01 01:55 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/include/hbpp.h
  * xharbour/source/pp/ppcore.c
    * added hack for accepting expressions which start with ':' character
      as regular/list match markers
    * fixed warning messages reported by Maurilio
    * add bit shift operations to #if calculations

2007-02-28 19:15 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/hbclass.ch
    * Converted scope declaration rules from #xtranslate to #xcommand, and moved them to bottom.

2007-02-28 20:00 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * dll_b32.bat
    * updated clean session with hbdocdll.exe, hbmakedll.exe, hbtestdll.exe,
      hbrundll.exe and xbscriptdll.exe

2007-02-28 19:40 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * make_b32.bat
    * updated clean session with ppgen.exe, bmsixcdx.lib and bmsixcdxmt.lib.
  * makefile.bc
  * hrbdll.bc
    * updated for new preprocessor.

2007-02-28 15:05 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * include/hbpp.h
  * source/pp/ppcore.c
    + Added missing "^^", "<<", ">>" bit operators
      /* Przemek please review */

2007-02-28 09:00 UTC+0100 Lorenzo Fiorini <lorenzo.fiorini/at/gmail.com>
  * contrid/gd/source/gdbarcode.prg
    * invalid string fixed
	 * code 128 fixed

2007-02-27 18:25 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * hrbdll.vc
  * makefile.vc